# godot-rust-script

./: .gitignore  Cargo.toml  README.md  download_godot_dev.nu  license_header.nu  rust-toolchain.toml
.github/workflows/: ci.yaml  nightly-check.yaml
derive/: Cargo.toml
derive/src/: attribute_ops.rs  enums.rs  impl_attribute.rs  lib.rs  property_group.rs  type_paths.rs
integration-test/: Cargo.toml  build.rs  build.rs.uid  extension.gdextension  extension.gdextension.uid  main.tscn
integration-test/src/: lib.rs  lib.rs.uid  negative_tests.rs  negative_tests.rs.uid
integration-test/src/scripts/: mod.rs  mod.rs.uid  test_script.rs  test_script.rs.uid
rust-script/: Cargo.toml  build.rs
rust-script/src/: apply.rs  editor_ui_hacks.rs  interface.rs  lib.rs  library.rs  script_registry.rs  shared.rs  static_script_registry.rs
rust-script/src/interface/: export.rs  on_editor.rs  property_group.rs  signals.rs
rust-script/src/runtime/: call_context.rs  downgrade_self.rs  editor.rs  hot_reloader.rs  metadata.rs  mod.rs  resource_loader.rs  resource_saver.rs  rust_script.rs  rust_script_instance.rs  rust_script_language.rs
rust-script/tests/: macro_test.rs  script_derive.rs
tests-scripts-lib/: Cargo.toml
tests-scripts-lib/src/: lib.rs
