[workspace]
resolver = "2"
members = [
  "rust-script",
  "derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
godot = { git = "https://github.com/godot-rust/gdext", tag = "v0.1.3", features = ["experimental-threads"] }
godot-cell = { git = "https://github.com/godot-rust/gdext", tag = "v0.1.3" }
itertools = "0.10.3"
rand = "0.8.5"
darling = { version = "0.20" }
proc-macro2 = "1.0.68"
quote = "1"
syn = "2"
const-str = "0.5.6"
thiserror = "1"
sha2-const = { git = "https://github.com/SuperFluffy/sha2-const", rev = "8a02ef1340c2de20a690840b45f298d55985d4da"}

godot-rust-script-derive = { path = "derive" }
tests-scripts-lib = { path = "tests-scripts-lib" }
