[workspace]
resolver = "2"
members = [
  "rust-script",
  "derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
godot = { version = "0.3.2", features = ["experimental-threads"] }
godot-cell = "0.3"
godot-bindings = "0.3"
itertools = "0.10"
rand = "0.8"
darling = { version = "0.20" }
proc-macro2 = "1.0"
quote = "1"
syn = "2"
const-str = "0.5"
thiserror = "1"

godot-rust-script-derive = { path = "derive" }
tests-scripts-lib = { path = "tests-scripts-lib" }

[workspace.lints.rust]
missing_docs = "warn"
