[package]
name = "godot-rust-script"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
godot.workspace = true
godot-cell.workspace = true

itertools = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

godot-rust-script-derive = { workspace = true, optional = true }
once_cell = "1.19.0"
const-str.workspace = true
thiserror.workspace = true

[dev-dependencies]
tests-scripts-lib = { path = "../tests-scripts-lib" }
godot-rust-script = { path = "./", features = ["runtime"] }

[build-dependencies]
godot-bindings.workspace = true

[features]
default = ["runtime", "scripts"]
runtime = ["dep:itertools", "dep:rand"]
scripts = ["dep:godot-rust-script-derive"]
